--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Arduino library port of Espressif implementation of the FT5x06 touch co
 paragraph=Arduino library port of Espressif implementation of the FT5x06 touch controller with esp_lcd_touch component. For use with LVGL 8.3.11 and esp32s3 boards.
 category=Display
 url=https://github.com/unxs0/esp_lcd_touch_ft5x06
-architectures=esp32s3
+architectures=esp32
 includes=esp_lcd_touch_ft5x06.h
