--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,11 @@
 name=esp_lcd_touch_ft5x06
-version=1.0.0
+version=2.0.0
 author=Gary Wallis
 maintainer=Arduino Library Manager<arduino@wallisandgill.com>
-sentence=Arduino library port of Espressif implementation of the FT5x06 touch controller with esp_lcd_touch component
-paragraph=Arduino library port of Espressif implementation of the FT5x06 touch controller with esp_lcd_touch component. For use with LVGL 8.3.11 and esp32s3 boards.
+sentence=Arduino library port of Espressif implementation of the FT5x06 touch controller includes esp_lcd_touch component
+paragraph=Arduino library port of Espressif implementation of the FT5x06 touch controller includes esp_lcd_touch component. For use with LVGL 8.3.11 and esp32 architecture.
 category=Display
 url=https://github.com/unxs0/esp_lcd_touch_ft5x06
 architectures=esp32
-includes=esp_lcd_touch_ft5x06.h
+includes=esp_lcd_touch_ft5x06.h,esp_lcd_touch.h
+depends=lvgl (=8.3.11)
